tests/ui/invalid_pymethods.stderr
error: class attribute methods cannot take arguments
 --> $DIR/invalid_pymethods.rs:9:29
  |
9 |     fn class_attr_with_args(foo: i32) {}
  |                             ^^^

error: `#[classattr]` does not take any arguments
  --> $DIR/invalid_pymethods.rs:14:5
   |
14 |     #[classattr(foobar)]
   |     ^

error: static method needs #[staticmethod] attribute
  --> $DIR/invalid_pymethods.rs:20:5
   |
20 |     fn staticmethod_without_attribute() {}
   |     ^^

error: unexpected receiver
  --> $DIR/invalid_pymethods.rs:26:35
   |
26 |     fn staticmethod_with_receiver(&self) {}
   |                                   ^

error: expected receiver for #[getter]
  --> $DIR/invalid_pymethods.rs:39:5
   |
39 |     fn getter_without_receiver() {}
   |     ^^

error: expected receiver for #[setter]
  --> $DIR/invalid_pymethods.rs:45:5
   |
45 |     fn setter_without_receiver() {}
   |     ^^

error: text_signature not allowed on __new__; if you want to add a signature on __new__, put it on the struct definition instead
  --> $DIR/invalid_pymethods.rs:51:24
   |
51 |     #[text_signature = "()"]
   |                        ^^^^

error: text_signature not allowed with this method type
  --> $DIR/invalid_pymethods.rs:58:24
   |
58 |     #[text_signature = "()"]
   |                        ^^^^

error: text_signature not allowed with this method type
  --> $DIR/invalid_pymethods.rs:65:24
   |
65 |     #[text_signature = "()"]
   |                        ^^^^

error: text_signature not allowed with this method type
  --> $DIR/invalid_pymethods.rs:72:24
   |
72 |     #[text_signature = "()"]
   |                        ^^^^

error: text_signature not allowed with this method type
  --> $DIR/invalid_pymethods.rs:79:24
   |
79 |     #[text_signature = "()"]
   |                        ^^^^

error: cannot specify a second method type
  --> $DIR/invalid_pymethods.rs:86:7
   |
86 |     #[staticmethod]
   |       ^^^^^^^^^^^^

error: Python functions cannot have generic type parameters
  --> $DIR/invalid_pymethods.rs:92:23
   |
92 |     fn generic_method<T>(value: T) {}
   |                       ^

error: Python functions cannot have `impl Trait` arguments
  --> $DIR/invalid_pymethods.rs:98:48
   |
98 |     fn impl_trait_method_first_arg(impl_trait: impl AsRef<PyAny>) {}
   |                                                ^^^^

error: Python functions cannot have `impl Trait` arguments
   --> $DIR/invalid_pymethods.rs:103:56
    |
103 |     fn impl_trait_method_second_arg(&self, impl_trait: impl AsRef<PyAny>) {}
    |                                                        ^^^^
